<resources>

    <string name="dialog_loading_login">Poczekaj chwile... Loguje się </string>
    <string name="dialog_loading_rezerwation">Poczekaj chwile... Ładuje rezerwacje </string>
    <string name="hide_date">Ukryte dane !</string>
    <string name="Un_hide_option_edit_passwort">Odkryłem opcje edycji hasła !</string>
    <string name="app_name">RPS live</string>
    <string name="username">Użytkownik</string>
    <string name="password">Haslo</string>
    <string name="sign_in">Zaloguj Się</string>
    <string name="register">Zarejestruj się</string>
    <string name="alert_dialog_info_detal_strat_hurse">Godzina rozpoczęcia</string>
    <string name="alert_dialog_info_detal_end_hurse">Godzina zakończenia</string>
    <string name="alert_dialog_messege_start_hours">Cześć godzina rozpoczecia tej rezerwacji to :  </string>
    <string name="alert_dialog_messege_end_hours">natomiast godzina zakończenia  rezerwacji to :  </string>
    <string name="title_info">Informacja</string>
    <string name="full_name">Imie</string>
    <string name="confirm_password">Potwierdz haslo</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Zaloguj sie</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Zarejstruj </string>
    <string name="logout">Wyloguj</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_student_event">Kalendarz z wydarzeniami </string>
    <string name="nav_student_my_event">MojeWydarzenia </string>
    <string name="nav_student_personalyty">Moje dane</string>
    <string name="nav_student_logout">Wyloguj</string>
    <string name="menu_rezervation_detal">Szczegółowe informacje</string>
    <string name="menu_change_rezerwation">Zamien rezerwacje</string>
    <string name="username_hint">Urzytkownik</string>
    <string name="number_room_hint">Numer pokoju</string>
    <string name="email_hint">Adres e-mail</string>
    <string name="telephon_hint">Numer Telefonu </string>
    <string name="regestriger_button_string"> Zarejestruj </string>
    <string name="clean_button_string"> Wyczyść </string>
    <string name="select_type_acount">Wybierz typ konta </string>
    <string name="select_type_rezervation">"Wybierz jaką sale chcesz zarezerwować "</string>
    <string name="sala_tv">Sala tv </string>
    <string name="wash_maschin">Pralnia</string>
    <string name="add_to_list_program_wash">dodalem do listy pranie </string>
    <string name="yes">tak</string>
    <string name="no">nie</string>
    <string name="position_delate">Pozycja usunieta, rowniez na serwerze</string>
    <string name="question_about_delate_position_list">Czy chcesz usunąć pozycje z listy?</string>
    <string name="hint_choose_washhouse">Wpisz pralnie ...</string>
    <string name="describe_using_calendar_fragment">Poniżej kalendarza widzisz liste rezerwacji pomieszczen na dany dzien \n
        Jest to lista obowiazujaca na twoim piętrze.</string>
    <string-array name="type_rezerwation">
        <item>Zarezerwuj Pralnie</item>
        <item>Zarezerwuj Sale TV</item>
    </string-array>


    <string-array name="Choose_type_account">
        <item>Konto Studenta</item>
        <item>Konto Portiera</item>
    </string-array>

    <string name="sale_tv">SALA TV</string>
    <string name="sale_game_playing">SALA DO GRANIA W GRY </string>

    <string name="title_activity_my_rezerwation"> Moje rezerwacje</string>
    <string name="title_activity_add_rezerwation"> panel dodawania rezerwacji </string>
    <string name="title_activity_calendar_rezerwation"> kalendarz rezerwacji </string>
    <string name="title_activity_my_data"> Moje dane </string>


    <string name="dos_not_set_hour">Nie ustawiłeś godziny</string>
    <string name="dos_not_set_wash">Nie wybrałeś pralni</string>
    <string name="dos_not_set_program">Nie wybrales programu</string>


    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="data_picker_title_end_rezervation">Ustaw daate końca rezerwacji</string>
    <string name="data_picker_title_time_end_rezerwation">Ustaw czas zakonczenia rezerwacji</string>
    <string name="data_picker_title_time_start_rezerwation">Ustaw czas rozpoczencia rezerwacji</string>
    <string name="data_picker_title_date_start_rezerwation">Ustaw date rozpoczencia rezerwacji</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_foregin_password">Zapomniałeś hasło ? Odzyskaj je.</string>
    <string name="text_view_choose_type_account">Wybierz typ  konta :</string>
    <string name="hint_get_number">Podaj swój numer </string>
    <string name="type_account">Typ konta</string>
    <string name="number_telephon">Numer telefonu</string>
    <string name="change_date">Zmień dane</string>
    <string name="change_number_phone">Zmień numer telefonu</string>
    <string name="save_date">Zapisz dane</string>
    <string name="give_old_password">Podaj stare hasło</string>
    <string name="want_to_change_password">Chcę zmienić hasło</string>
    <string name="get_new_password">Podaj nowe hasło</string>
    <string name="repat_new_password">Powtórz nowe hasło</string>
    <string name="get_old_password_hint">Tutaj wpisz swoje stare haslo ...</string>
    <string name="get_new_passwort_hint">Tutaj wpisz swoje nowe hasło</string>
    <string name="repate_new_passwort_hint">Powtórz nowe haslo</string>
    <string name="is_the_key_at_the_porters_loddge_question">Czy klucz jest na portierni ???</string>
    <string name="nav_my_rezerwation_delate" >Usuń rezerwacje</string>
    <string name="donot_delete_list_empty" >Nie można usunąć pozycji lista jest pusta </string>
    <string name="panel_cheff">Panel Kierownika</string>
    <string name="your_username">Podaj  twój username</string>
    <string name="hint_username">Tutaj wpisz nazwe uzytkownika</string>
    <string name="hint_get_email">Podaj tutaj email</string>
    <string name="hint_get_number_phone">Tutaj wpisz numer telefonu</string>
    <string name="choose_account">Wybierz typ konta</string>
    <string name="hint_get_number_room">Tutaj wpisz numer pokoju</string>
    <string name="valide_password_true">Takie haslo moze być</string>
    <string name="valide_username_is_small">Za krótka nazwa użytkownika</string>
    <string name="valide_username_is_empty">Nazwa uzytkownika jest pusta ! </string>
    <string name="event_created">Wydarzenie jest utworzone</string>
    <string name="event_created_problem">Wydarzenie jest utworzone</string>
    <string name="end_date">Data końca rejestracji</string>
    <string name="change_email">Zmień email</string>
    <string name="change_number">Zmień numer</string>
    <string name="wasche_machine">Pralka</string>
    <string name="washer_program">Program</string>
    <string name="washer_time">Czas</string>
    <string-array name="type_change">
       <item>Zmien dane</item>
       <item>Zmien haslo</item>
    </string-array>

</resources>
