<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_student_event_menu"
            android:icon="@drawable/baseline_event_black_24dp"
            android:title="@string/nav_student_event" />

        <item
            android:id="@+id/nav_student_myEvent"
            android:icon="@drawable/calendar_my_rezervation"
            android:title="@string/nav_student_my_event"
            />
        <item
            android:id="@+id/nav_student_personality_date"
            android:icon="@drawable/baseline_perm_identity_black_24dp"
            android:title="@string/nav_student_personalyty" />



        <item
            android:id="@+id/nav_student_logout"
            android:icon="@drawable/baseline_power_settings_new_black_24dp"
            android:title="@string/nav_student_logout"
            />


    </group>



</menu>