<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_cheff_panel"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/panel_cheff" />
        <item
            android:id="@+id/nav_cheff_personality_date"
            android:icon="@drawable/baseline_perm_identity_black_24dp"
            android:title="@string/nav_student_personalyty" />



        <item
            android:id="@+id/nav_cheff_personality_date_logout"
            android:icon="@drawable/baseline_power_settings_new_black_24dp"
            android:title="@string/nav_student_logout"
            />


    </group>



</menu>