<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/customborder"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewOnePositionWashouseProgram"
            android:layout_width="@dimen/weiight_One_position_adder_washhouse"
            android:layout_height="21dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tx2OnePosition"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tx2OnePosition"
            app:layout_constraintTop_toBottomOf="@+id/tx2OnePosition"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tx2OnePosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="12dp"
            android:text="@string/washer_program"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/txOnePoswash"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewOnePositionWashhouseWash"
            android:layout_width="@dimen/weiight_One_position_adder_washhouse"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/txOnePoswash"
            app:layout_constraintHorizontal_bias="0.346"
            app:layout_constraintStart_toStartOf="@+id/txOnePoswash"
            app:layout_constraintTop_toBottomOf="@+id/txOnePoswash" />

        <TextView
            android:id="@+id/tx3OnePositionWashouse3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="12dp"
            android:text="@string/washer_time"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/tx2OnePosition"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewOnePositionWashouseTIme"
            android:layout_width="@dimen/weiight_One_position_adder_washhouse"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/tx3OnePositionWashouse3"
            app:layout_constraintStart_toStartOf="@+id/tx3OnePositionWashouse3"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/txOnePoswash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/wasche_machine"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="329dp"
            android:layout_height="5dp"
            android:layout_marginBottom="4dp"
            android:background="@color/album_title"
            app:layout_constraintBottom_toTopOf="@+id/textViewOnePositionWashouseProgram"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.253"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>